--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint"
@@ -32,6 +32,7 @@
     "expo-symbols": "~0.2.0",
     "expo-system-ui": "~4.0.3",
     "expo-web-browser": "~14.0.1",
+    "ffmpeg-kit-react-native": "^6.0.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.2",
@@ -44,7 +45,11 @@
     "react-native-toast-message": "^2.2.1",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.4",
-    "zustand": "^5.0.1"
+    "zustand": "^5.0.1",
+    "expo-document-picker": "~13.0.1",
+    "expo-file-system": "~18.0.3",
+    "expo-image-picker": "~16.0.2",
+    "expo-av": "~15.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
