--- a/android/build.gradle
+++ b/android/build.gradle
@@ -8,7 +8,7 @@ buildscript {
         targetSdkVersion = Integer.parseInt(findProperty('android.targetSdkVersion') ?: '34')
         kotlinVersion = findProperty('android.kotlinVersion') ?: '1.9.24'
 
-        ndkVersion = "26.1.10909125"
+        ndkVersion = "27.2.12479018"
     }
     repositories {
         google()
@@ -39,3 +39,6 @@ allprojects {
         maven { url 'https://www.jitpack.io' }
     }
 }
+// @generated begin ffmpeg-kit-react-native-package - expo prebuild (DO NOT MODIFY) sync-3d2afee3bf3e62c8e7e2f5faaff1396dc491d7de
+ext { ffmpegKitPackage = "min" }
+// @generated end ffmpeg-kit-react-native-package
