--- a/ios/karmaclipapp/Info.plist
+++ b/ios/karmaclipapp/Info.plist
@@ -31,6 +31,12 @@
           <string>com.mellob.karmaclip.app</string>
         </array>
       </dict>
+      <dict>
+        <key>CFBundleURLSchemes</key>
+        <array>
+          <string>exp+karmaclip.app</string>
+        </array>
+      </dict>
     </array>
     <key>CFBundleVersion</key>
     <string>1</string>
