--- a/package.json
+++ b/package.json
@@ -15,15 +15,22 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@config-plugins/ffmpeg-kit-react-native": "^8.0.0",
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
     "axios": "^1.7.7",
     "expo": "~52.0.7",
+    "expo-av": "~15.0.1",
     "expo-blur": "~14.0.1",
+    "expo-build-properties": "^0.13.1",
     "expo-constants": "~17.0.3",
+    "expo-dev-client": "~5.0.2",
+    "expo-document-picker": "~13.0.1",
+    "expo-file-system": "~18.0.3",
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.0",
+    "expo-image-picker": "~16.0.2",
     "expo-linking": "~7.0.2",
     "expo-router": "~4.0.6",
     "expo-secure-store": "~14.0.0",
@@ -45,11 +52,7 @@
     "react-native-toast-message": "^2.2.1",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.4",
-    "zustand": "^5.0.1",
-    "expo-document-picker": "~13.0.1",
-    "expo-file-system": "~18.0.3",
-    "expo-image-picker": "~16.0.2",
-    "expo-av": "~15.0.1"
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
